--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -59,7 +59,7 @@ if (MSVC)
 endif()
 
 # glextrusion definitions
-add_compile_definitions(DEBUG_OUTPUT)
+add_compile_definitions(TRIANGLE_GENERATOR)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
@@ -1119,20 +1119,40 @@ set(PROJECT_SOURCES
     ../threepp/generated/threepp/renderers/shaders/ShaderChunk.cpp
 
     ../pystring/pystring.cpp
-    ../glextrusion/extrude.c
-    ../glextrusion/ex_alpha.c
-    ../glextrusion/ex_angle.c
-    ../glextrusion/ex_cut_round.c
-    ../glextrusion/ex_raw.c
-    ../glextrusion/intersect.c
-    ../glextrusion/qmesh.c
-    ../glextrusion/rotate.c
-    ../glextrusion/rot_prince.c
-    ../glextrusion/round_cap.c
-    ../glextrusion/segment.c
-    ../glextrusion/texgen.c
-    ../glextrusion/urotate.c
-    ../glextrusion/view.c
+
+    ../cgle-c++/cgle-c++/ExtrusionInternals.cpp
+    ../cgle-c++/cgle-c++/ExtrusionLib.cpp
+    ../cgle-c++/cgle-c++/gleBaseExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleConeExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleCylinderExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleHelicoidExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleIBeam.cpp
+    ../cgle-c++/cgle-c++/gleLatheExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleScrew.cpp
+    ../cgle-c++/cgle-c++/gleSimpleBeam.cpp
+    ../cgle-c++/cgle-c++/gleSimpleTwistedIBeam.cpp
+    ../cgle-c++/cgle-c++/gleSpiralExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleTaperExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleToroidExtrusion.cpp
+    ../cgle-c++/cgle-c++/gleTwistedIBeam.cpp
+    ../cgle-c++/cgle-c++/gleTwistExtrusion.cpp
+
+    # ../glextrusion/extrude.c
+    # ../glextrusion/ex_alpha.c
+    # ../glextrusion/ex_angle.c
+    # ../glextrusion/ex_cut_round.c
+    # ../glextrusion/ex_raw.c
+    # ../glextrusion/intersect.c
+    # ../glextrusion/qmesh.c
+    # ../glextrusion/rotate.c
+    # ../glextrusion/rot_prince.c
+    # ../glextrusion/round_cap.c
+    # ../glextrusion/segment.c
+    # ../glextrusion/texgen.c
+    # ../glextrusion/urotate.c
+    # ../glextrusion/view.c
+
     ../libgwavi/avi-utils.c
     ../libgwavi/fileio.c
     ../libgwavi/gwavi.c
@@ -1299,20 +1319,44 @@ set(PROJECT_SOURCES
     ../GaitSymQt/TrackBall.h
     ../GaitSymQt/UniqueNameValidator.h
     ../GaitSymQt/ViewControlWidget.h
-    ../glextrusion/copy.h
-    ../glextrusion/extrude.h
-    ../glextrusion/gle/gle.h
-    ../glextrusion/intersect.h
-    ../glextrusion/port.h
-    ../glextrusion/rot.h
-    ../glextrusion/segment.h
-    ../glextrusion/tube_gc.h
-    ../glextrusion/vvector.h    ../libgwavi/avi-utils.h
+
+    ../cgle-c++/cgle-c++/ExtrusionInternals.h
+    ../cgle-c++/cgle-c++/ExtrusionLib.h
+    ../cgle-c++/cgle-c++/gleBaseExtrusion.h
+    ../cgle-c++/cgle-c++/gleConeExtrusion.h
+    ../cgle-c++/cgle-c++/gleCylinderExtrusion.h
+    ../cgle-c++/cgle-c++/gleExtrusion.h
+    ../cgle-c++/cgle-c++/gleHelicoidExtrusion.h
+    ../cgle-c++/cgle-c++/gleIBeam.h
+    ../cgle-c++/cgle-c++/gleLatheExtrusion.h
+    ../cgle-c++/cgle-c++/gleScrew.h
+    ../cgle-c++/cgle-c++/gleSimpleBeam.h
+    ../cgle-c++/cgle-c++/gleSimpleTwistedIBeam.h
+    ../cgle-c++/cgle-c++/gleSpiralExtrusion.h
+    ../cgle-c++/cgle-c++/gleTaperExtrusion.h
+    ../cgle-c++/cgle-c++/gleToroidExtrusion.h
+    ../cgle-c++/cgle-c++/gleTwistedIBeam.h
+    ../cgle-c++/cgle-c++/gleTwistExtrusion.h
+
+    # ../glextrusion/copy.h
+    # ../glextrusion/extrude.h
+    # ../glextrusion/gle/gle.h
+    # ../glextrusion/intersect.h
+    # ../glextrusion/port.h
+    # ../glextrusion/rot.h
+    # ../glextrusion/segment.h
+    # ../glextrusion/tube_gc.h
+    # ../glextrusion/vvector.h
+
+    ../libgwavi/avi-utils.h
     ../libgwavi/fileio.h
     ../libgwavi/gwavi.h
     ../libgwavi/gwavi_private.h
+
     ../pocketpy-1.4.5/include/pocketpy.h
+
     ../pystring/pystring.h
+
     ../src/AMotorJoint.h
     ../src/ArgParse.h
     ../src/BallJoint.h
@@ -1436,7 +1480,8 @@ ENDIF(UNIX)
 set(INCLUDE_DIRECTORIES
 ../fast_double_parser
 ../GaitSymQt
-../glextrusion
+# ../glextrusion
+../cgle-c++
 ../libgwavi
 ../PhysX
 ../pocketpy-1.4.5/include
