--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -1122,37 +1122,37 @@ set(PROJECT_SOURCES
     ../pystring/pystring.cpp
 
     ../cgle-c++/cgle-c++/GLEmulator.cpp
-    ../cgle-c++/cgle-c++/ExtrusionInternals.cpp
-    ../cgle-c++/cgle-c++/gleBaseExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleConeExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleCylinderExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleHelicoidExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleIBeam.cpp
-    ../cgle-c++/cgle-c++/gleLatheExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleScrew.cpp
-    ../cgle-c++/cgle-c++/gleSimpleBeam.cpp
-    ../cgle-c++/cgle-c++/gleSimpleTwistedIBeam.cpp
-    ../cgle-c++/cgle-c++/gleSpiralExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleTaperExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleToroidExtrusion.cpp
-    ../cgle-c++/cgle-c++/gleTwistedIBeam.cpp
-    ../cgle-c++/cgle-c++/gleTwistExtrusion.cpp
+    # ../cgle-c++/cgle-c++/ExtrusionInternals.cpp
+    # ../cgle-c++/cgle-c++/gleBaseExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleConeExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleCylinderExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleHelicoidExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleIBeam.cpp
+    # ../cgle-c++/cgle-c++/gleLatheExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleScrew.cpp
+    # ../cgle-c++/cgle-c++/gleSimpleBeam.cpp
+    # ../cgle-c++/cgle-c++/gleSimpleTwistedIBeam.cpp
+    # ../cgle-c++/cgle-c++/gleSpiralExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleTaperExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleToroidExtrusion.cpp
+    # ../cgle-c++/cgle-c++/gleTwistedIBeam.cpp
+    # ../cgle-c++/cgle-c++/gleTwistExtrusion.cpp
 
-    # ../glextrusion/extrude.cpp
-    # ../glextrusion/ex_alpha.cpp
-    # ../glextrusion/ex_angle.cpp
-    # ../glextrusion/ex_cut_round.cpp
-    # ../glextrusion/ex_raw.cpp
-    # ../glextrusion/intersect.cpp
-    # ../glextrusion/qmesh.cpp
-    # ../glextrusion/rotate.cpp
-    # ../glextrusion/rot_prince.cpp
-    # ../glextrusion/round_cap.cpp
-    # ../glextrusion/segment.cpp
-    # ../glextrusion/texgen.cpp
-    # ../glextrusion/urotate.cpp
-    # ../glextrusion/view.cpp
+    ../glextrusion/extrude.cpp
+    ../glextrusion/ex_alpha.cpp
+    ../glextrusion/ex_angle.cpp
+    ../glextrusion/ex_cut_round.cpp
+    ../glextrusion/ex_raw.cpp
+    ../glextrusion/intersect.cpp
+    ../glextrusion/qmesh.cpp
+    ../glextrusion/rotate.cpp
+    ../glextrusion/rot_prince.cpp
+    ../glextrusion/round_cap.cpp
+    ../glextrusion/segment.cpp
+    ../glextrusion/texgen.cpp
+    ../glextrusion/urotate.cpp
+    ../glextrusion/view.cpp
 
     ../libgwavi/avi-utils.c
     ../libgwavi/fileio.c
@@ -1322,33 +1322,33 @@ set(PROJECT_SOURCES
     ../GaitSymQt/ViewControlWidget.h
 
     ../cgle-c++/cgle-c++/GLEmulator.h
-    ../cgle-c++/cgle-c++/ExtrusionInternals.h
-    ../cgle-c++/cgle-c++/ExtrusionLib.h
-    ../cgle-c++/cgle-c++/gleBaseExtrusion.h
-    ../cgle-c++/cgle-c++/gleConeExtrusion.h
-    ../cgle-c++/cgle-c++/gleCylinderExtrusion.h
-    ../cgle-c++/cgle-c++/gleExtrusion.h
-    ../cgle-c++/cgle-c++/gleHelicoidExtrusion.h
-    ../cgle-c++/cgle-c++/gleIBeam.h
-    ../cgle-c++/cgle-c++/gleLatheExtrusion.h
-    ../cgle-c++/cgle-c++/gleScrew.h
-    ../cgle-c++/cgle-c++/gleSimpleBeam.h
-    ../cgle-c++/cgle-c++/gleSimpleTwistedIBeam.h
-    ../cgle-c++/cgle-c++/gleSpiralExtrusion.h
-    ../cgle-c++/cgle-c++/gleTaperExtrusion.h
-    ../cgle-c++/cgle-c++/gleToroidExtrusion.h
-    ../cgle-c++/cgle-c++/gleTwistedIBeam.h
-    ../cgle-c++/cgle-c++/gleTwistExtrusion.h
+    # ../cgle-c++/cgle-c++/ExtrusionInternals.h
+    # ../cgle-c++/cgle-c++/ExtrusionLib.h
+    # ../cgle-c++/cgle-c++/gleBaseExtrusion.h
+    # ../cgle-c++/cgle-c++/gleConeExtrusion.h
+    # ../cgle-c++/cgle-c++/gleCylinderExtrusion.h
+    # ../cgle-c++/cgle-c++/gleExtrusion.h
+    # ../cgle-c++/cgle-c++/gleHelicoidExtrusion.h
+    # ../cgle-c++/cgle-c++/gleIBeam.h
+    # ../cgle-c++/cgle-c++/gleLatheExtrusion.h
+    # ../cgle-c++/cgle-c++/gleScrew.h
+    # ../cgle-c++/cgle-c++/gleSimpleBeam.h
+    # ../cgle-c++/cgle-c++/gleSimpleTwistedIBeam.h
+    # ../cgle-c++/cgle-c++/gleSpiralExtrusion.h
+    # ../cgle-c++/cgle-c++/gleTaperExtrusion.h
+    # ../cgle-c++/cgle-c++/gleToroidExtrusion.h
+    # ../cgle-c++/cgle-c++/gleTwistedIBeam.h
+    # ../cgle-c++/cgle-c++/gleTwistExtrusion.h
 
-    # ../glextrusion/copy.h
-    # ../glextrusion/extrude.h
-    # ../glextrusion/gle/gle.h
-    # ../glextrusion/intersect.h
-    # ../glextrusion/port.h
-    # ../glextrusion/rot.h
-    # ../glextrusion/segment.h
-    # ../glextrusion/tube_gc.h
-    # ../glextrusion/vvector.h
+    ../glextrusion/copy.h
+    ../glextrusion/extrude.h
+    ../glextrusion/gle/gle.h
+    ../glextrusion/intersect.h
+    ../glextrusion/port.h
+    ../glextrusion/rot.h
+    ../glextrusion/segment.h
+    ../glextrusion/tube_gc.h
+    ../glextrusion/vvector.h
 
     ../libgwavi/avi-utils.h
     ../libgwavi/fileio.h
@@ -1482,8 +1482,8 @@ ENDIF(UNIX)
 set(INCLUDE_DIRECTORIES
 ../fast_double_parser
 ../GaitSymQt
-# ../glextrusion
-../cgle-c++
+../glextrusion
+# ../cgle-c++
 ../libgwavi
 ../PhysX
 ../pocketpy-1.4.5/include
