--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -59,7 +59,7 @@ if (MSVC)
 endif()
 
 # glextrusion definitions
-add_compile_definitions(TRIANGLE_GENERATOR)
+add_compile_definitions(TRIANGLE_GENERATOR __GLE_DOUBLE)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
