--- a/terminal/CMakeLists.txt
+++ b/terminal/CMakeLists.txt
@@ -913,6 +913,8 @@ set(PROJECT_SOURCES
     ../src/LMotorJoint.cpp
     ../src/MAMuscle.cpp
     ../src/MAMuscleComplete.cpp
+    ../src/MagicMuscle.cpp
+    ../src/MagicStrap.cpp
     ../src/Marker.cpp
     ../src/MarkerEllipseDriver.cpp
     ../src/MarkerPositionDriver.cpp
@@ -1021,6 +1023,8 @@ set(PROJECT_SOURCES
     ../src/LMotorJoint.h
     ../src/MAMuscle.h
     ../src/MAMuscleComplete.h
+    ../src/MagicMuscle.h
+    ../src/MagicStrap.h
     ../src/Marker.h
     ../src/MarkerEllipseDriver.h
     ../src/MarkerPositionDriver.h
