--- a/terminal/CMakeLists.txt
+++ b/terminal/CMakeLists.txt
@@ -933,6 +933,7 @@ set(PROJECT_SOURCES
     ../src/PIDErrorInController.cpp
     ../src/PIDMuscleLengthController.cpp
     ../src/PlaneGeom.cpp
+    ../src/PlaybackPhysicsEngine.cpp
     ../src/Reporter.cpp
     ../src/Simulation.cpp
     ../src/SliderJoint.cpp
@@ -1043,6 +1044,7 @@ set(PROJECT_SOURCES
     ../src/PIDErrorInController.h
     ../src/PIDMuscleLengthController.h
     ../src/PlaneGeom.h
+    ../src/PlaybackPhysicsEngine.h
     ../src/Reporter.h
     ../src/Simulation.h
     ../src/SliderJoint.h
