Fixed pocketpy crash

--- a/terminal/CMakeLists.txt
+++ b/terminal/CMakeLists.txt
@@ -37,8 +37,8 @@ add_compile_definitions(PX_PHYSX_STATIC_LIB)
 if(CMAKE_BUILD_TYPE STREQUAL Debug)
     add_compile_definitions(PX_CHECKED)
     message(STATUS "PX_CHECKED defined")
-    add_compile_definitions(PX_SUPPORT_PVD)
-    message(STATUS "PX_SUPPORT_PVD defined")
+    #add_compile_definitions(PX_SUPPORT_PVD)
+    #message(STATUS "PX_SUPPORT_PVD defined")
 endif()
 if(CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL arm64)
     add_compile_definitions(PX_SIMD_DISABLED)
@@ -64,6 +64,7 @@ if (MSVC)
     add_compile_definitions(_USE_MATH_DEFINES)
     add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
     add_compile_options(-utf-8)
+    add_compile_options(-D_WIN32_WINNT=0x0601)
 endif()
 
 set(PROJECT_SOURCES
