PhysX now builds as static libraries but link fails

--- a/GaitSymQt/CMakeLists.txt
+++ b/GaitSymQt/CMakeLists.txt
@@ -57,10 +57,12 @@ if (use_physx_src)
     # PX_CHECKED  [code to detect invalid parameters, API race conditions, and other incorrect uses of the API]
     # PX_PROFILE  [omits the checks, but still has PVD and memory instrumentation]
     if(CMAKE_BUILD_TYPE STREQUAL Debug)
+        add_compile_definitions(PX_DEBUG)
+        message(STATUS "PX_DEBUG defined")
         add_compile_definitions(PX_CHECKED)
         message(STATUS "PX_CHECKED defined")
-        add_compile_definitions(PX_SUPPORT_PVD)
-        message(STATUS "PX_SUPPORT_PVD defined")
+        # add_compile_definitions(PX_SUPPORT_PVD)
+        # message(STATUS "PX_SUPPORT_PVD defined")
     endif()
     if(CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL arm64)
         add_compile_definitions(PX_SIMD_DISABLED)
@@ -1040,16 +1042,19 @@ if (use_mucojo_src)
 endif()
 
 if (use_physx_src)
-    #SET(PHYSX_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../PhysX/PhysX-107.0-physx-5.6.0-flow-2.2.0-blast-5.0.6/physx)
-    SET(PHYSX_ROOT_DIR ../PhysX/PhysX-107.0/physx)
+
+    set(PHYSX_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../PhysX/PhysX-107.0-physx-5.6.0-flow-2.2.0-blast-5.0.6/physx)
+    #set(PHYSX_ROOT_DIR ../PhysX/PhysX-107.0/physx)
     if (UNIX)
-        SET(TARGET_BUILD_PLATFORM unix)
+        set(TARGET_BUILD_PLATFORM unix)
     endif()
     if (WIN32)
-        SET(TARGET_BUILD_PLATFORM windows)
+        set(TARGET_BUILD_PLATFORM windows)
     endif()
-    SET(PROJECT_CMAKE_FILES_DIR ../../custom_cmake)
+    set(PROJECT_CMAKE_FILES_DIR ../../custom_cmake) # these have been copied from physx/source/compiler/cmake
+    set(PX_GENERATE_STATIC_LIBRARIES 1)
 
+    include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXFoundation.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/LowLevel.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/LowLevelAABB.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/LowLevelDynamics.cmake)
@@ -1058,7 +1063,6 @@ if (use_physx_src)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXCommon.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXCooking.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXExtensions.cmake)
-    include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXFoundation.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXPvdSDK.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXTask.cmake)
     include(${PHYSX_ROOT_DIR}/${PROJECT_CMAKE_FILES_DIR}/PhysXVehicle.cmake)
